tests/paczka1/fuzzy1/54167283.err
Error in line 6: vMwe8MA S12 99,6
Error in line 9: 3xja08q5oqK A668 58,8
Error in line 7: oCSOSmT A626 85,6
Error in line 5: cXkE25I A626 6,2
Error in line 21: A211 A668 95,0
Error in line 19: oCSOSmT A668 59,9
